# tryptag

./: .gitignore  README.md  pyproject.toml  setup.cfg  tryptag.py
examples/: analyse_list.ipynb  localisation_search.ipynb  open_cell.ipynb  tryptools.ipynb
src/: tryptag.py
src/tryptag/: __init__.py  bia.py  cache.py  datasource.py  images.py  processing.py  tryptag.py  zenodo.py
src/tryptag/tryptools/: __init__.py  tryptools.py
tests/: test_tryptag.py
