[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "tryptag"
version = "0.0.1"
authors = [
	{ name = "Richard Wheeler", email="richardwheeler@outlook.com" },
]
description = "Python module for accessing and handling TrypTag genome-wide protein localisation project data."
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
	"Programming Language :: Python :: 3",
	"Operating System :: OS Independent"
]

[project.urls]
"Homepage" = "https://github.com/zephyris/tryptag"